@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-14
+2013-03-24 Andy Salnikov
+- use new psddlc feature to remap enum constant names ito names used 
+  by HDF5 translator
+
 Tag: V00-01-13
 2013-03-23 Andy Salnikov
 - fix ControlData schema
